@@ -111,12 +111,14 @@ ifdef STANDALONE_EXTENSION_PATH
 		STANDALONE_EXTENSION_FILES=mingwm10.dll iconv.dll intl.dll libglib-2.0-0.dll malaga.dll \
 		libvoikko-1.dll voikko-fi_FI.pro voikko-fi_FI.lex_l voikko-fi_FI.mor_l voikko-fi_FI.sym_l
 		LINK_FLAGS += -lvoikko
-	else ifeq "$(PLATFORM)" "macosx"
-		STANDALONE_EXTENSION_FILES=voikko-fi_FI.pro voikko-fi_FI.lex_l voikko-fi_FI.mor_l voikko-fi_FI.sym_l
 	else
-		STANDALONE_EXTENSION_FILES=libmalaga.so.7 libvoikko.so.1 \
-		voikko-fi_FI.pro voikko-fi_FI.lex_l voikko-fi_FI.mor_l voikko-fi_FI.sym_l
-		LINK_FLAGS += -lvoikko
+		ifeq "$(PLATFORM)" "macosx"
+			STANDALONE_EXTENSION_FILES=voikko-fi_FI.pro voikko-fi_FI.lex_l voikko-fi_FI.mor_l voikko-fi_FI.sym_l
+		else
+			STANDALONE_EXTENSION_FILES=libmalaga.so.7 libvoikko.so.1 \
+			voikko-fi_FI.pro voikko-fi_FI.lex_l voikko-fi_FI.mor_l voikko-fi_FI.sym_l
+			LINK_FLAGS += -lvoikko
+		endif
 	endif
 else
 	VOIKKO_CC_DEFINES=
@@ -234,17 +236,19 @@ ifeq "$(PLATFORM)" "windows"
 	/MAP:build/voikko.map $^ \
 	 $(CPPUHELPERLIB) $(CPPULIB) $(SALLIB) $(STLPORTLIB) msvcrt.lib kernel32.lib build\libvoikko-1.lib
 	mt -manifest build/oxt/voikko.dll.manifest -outputresource:build/oxt/voikko.dll;2
-else ifeq "$(PLATFORM)" "macosx"
-	cat $(PRJ)/settings/component.uno.map > build/voikko.map
-	nm -gx $^ | $(ADDSYMBOLS) >> build/voikko.map
-	$(LINK) $(COMP_LINK_FLAGS) build/voikko.map $(LINK_LIBS) -o $@ $^ \
-	$(CPPUHELPERLIB) $(CPPULIB) $(SALLIB) $(CPPUHELPERDYLIB) $(CPPUDYLIB) $(SALDYLIB) \
-	$(LIBVOIKKO_PATH)/lib/libvoikko.a $(LIBVOIKKO_PATH)/lib/libmalaga.a \
-	$(LIBVOIKKO_PATH)/lib/libiconv.a $(LIBVOIKKO_PATH)/lib/libglib-2.0.a \
-	$(LIBVOIKKO_PATH)/lib/libintl.a -framework CoreFoundation -framework Carbon
-	$(INSTALL_NAME_URELIBS)  $@
 else
-	$(LINK) $(LINK_FLAGS) -o $@ $^
+	ifeq "$(PLATFORM)" "macosx"
+		cat $(PRJ)/settings/component.uno.map > build/voikko.map
+		nm -gx $^ | $(ADDSYMBOLS) >> build/voikko.map
+		$(LINK) $(COMP_LINK_FLAGS) build/voikko.map $(LINK_LIBS) -o $@ $^ \
+		$(CPPUHELPERLIB) $(CPPULIB) $(SALLIB) $(CPPUHELPERDYLIB) $(CPPUDYLIB) $(SALDYLIB) \
+		$(LIBVOIKKO_PATH)/lib/libvoikko.a $(LIBVOIKKO_PATH)/lib/libmalaga.a \
+		$(LIBVOIKKO_PATH)/lib/libiconv.a $(LIBVOIKKO_PATH)/lib/libglib-2.0.a \
+		$(LIBVOIKKO_PATH)/lib/libintl.a -framework CoreFoundation -framework Carbon
+		$(INSTALL_NAME_URELIBS)  $@
+	else
+		$(LINK) $(LINK_FLAGS) -o $@ $^
+	endif
 endif
 
 
