@@ -1,3 +1,7 @@
+2008-08-10 Harri Pitkänen <hatapitk@iki.fi>
+
+	* Adapt to SDK changes on Windows.
+
 2008-08-09 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Adapt to SDK changes on OS X.
